parser/fase2/team08/Tytus_SQLPARSER_G8/optimizacion/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BLANCO
    CADENA2
    COMENTARIO_MULTILINEA
    COMENTARIO_SIMPLE
    COMILLAS
    LLAVEDER
    LLAVEIZQ

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> def main PARIZQ PARDER DOS_PUNTOS
Rule 5     instruccion -> def ID PARIZQ PARDER DOS_PUNTOS
Rule 6     instruccion -> importacion
Rule 7     instruccion -> ldeclaracionesg
Rule 8     instruccion -> decorador
Rule 9     instruccion -> if PARIZQ expre relacional expre PARDER DOS_PUNTOS
Rule 10    instruccion -> if NAME IGUAL IGUAL CADENA DOS_PUNTOS
Rule 11    decorador -> ARROBA with_goto
Rule 12    sentGoto -> goto PUNTO ID
Rule 13    sentLabel -> label PUNTO ID
Rule 14    importacion -> from goto import with_goto importas
Rule 15    importacion -> from lidsp import POR importas
Rule 16    importacion -> from lidsp import ID importas
Rule 17    importas -> as ID
Rule 18    importas -> <empty>
Rule 19    importacion -> import lidsp importas
Rule 20    lidsp -> lidsp PUNTO ID
Rule 21    lidsp -> ID
Rule 22    lidsp -> main
Rule 23    lidsp -> ejecutar
Rule 24    ldeclarlocals -> ldeclarlocals ldeclaracionesg
Rule 25    ldeclarlocals -> ldeclaracionesg
Rule 26    ldeclaracionesg -> global ID
Rule 27    ldeclaracionesg -> lidsp PARIZQ ID COMA ID PARDER
Rule 28    ldeclaracionesg -> lidsp PARIZQ PARDER
Rule 29    ldeclaracionesg -> ID PARIZQ PARDER
Rule 30    ldeclaracionesg -> main PARIZQ PARDER
Rule 31    ldeclaracionesg -> print PARIZQ expresiones PARDER
Rule 32    ldeclaracionesg -> print PARIZQ ID CADENA PARDER
Rule 33    ldeclaracionesg -> ID PUNTO ID IGUAL expre
Rule 34    ldeclaracionesg -> lidsp IGUAL expresiones
Rule 35    ldeclaracionesg -> ID CORIZQ expresiones CORDER IGUAL expresiones
Rule 36    ldeclaracionesg -> ID PUNTO ID PARIZQ ID PARDER
Rule 37    ldeclaracionesg -> ID PUNTO ejecutar PARIZQ ID COMA ID PARDER
Rule 38    ldeclaracionesg -> ID PUNTO ID IGUAL CORIZQ CORDER
Rule 39    ldeclaracionesg -> for ID in lidsp DOS_PUNTOS
Rule 40    ldeclaracionesg -> return
Rule 41    ldeclaracionesg -> sentGoto
Rule 42    ldeclaracionesg -> sentLabel
Rule 43    expresiones -> expresiones IGUAL expresiones
Rule 44    expresiones -> expresiones MAYORQ expresiones
Rule 45    expresiones -> expresiones MENORQ expresiones
Rule 46    expresiones -> expresiones MAYOR_IGUALQ expresiones
Rule 47    expresiones -> expresiones MENOR_IGUALQ expresiones
Rule 48    expresiones -> expresiones DISTINTO expresiones
Rule 49    expresiones -> expresiones MAS expresiones
Rule 50    expresiones -> expresiones MENOS expresiones
Rule 51    expresiones -> expresiones POR expresiones
Rule 52    expresiones -> expresiones DIVIDIDO expresiones
Rule 53    expresiones -> expresiones EXPONENCIACION expresiones
Rule 54    expresiones -> expresiones MODULO expresiones
Rule 55    relacional -> IGUAL IGUAL
Rule 56    relacional -> MAYORQ
Rule 57    relacional -> MENORQ
Rule 58    relacional -> MAYOR_IGUALQ
Rule 59    relacional -> MENOR_IGUALQ
Rule 60    relacional -> DISTINTO
Rule 61    expresiones -> expre
Rule 62    expre -> ID
Rule 63    expre -> ENTERO
Rule 64    expre -> FDECIMAL
Rule 65    expre -> CARACTER
Rule 66    expre -> None
Rule 67    expre -> true
Rule 68    expre -> false
Rule 69    expre -> CADENA
Rule 70    expre -> ID CADENA
Rule 71    expre -> CORIZQ CORDER
Rule 72    expre -> CORIZQ expresiones CORDER
Rule 73    expre -> ID CORIZQ expresiones CORDER
Rule 74    expre -> ID PARIZQ expresiones PARDER
Rule 75    expre -> ejecutar_analisis PARIZQ ID PARDER
Rule 76    expre -> ID PUNTO ejecutar PARIZQ ID COMA ID PARDER

Terminals, with rules where they appear

ARROBA               : 11
BLANCO               : 
CADENA               : 10 32 69 70
CADENA2              : 
CARACTER             : 65
COMA                 : 27 37 76
COMENTARIO_MULTILINEA : 
COMENTARIO_SIMPLE    : 
COMILLAS             : 
CORDER               : 35 38 71 72 73
CORIZQ               : 35 38 71 72 73
DISTINTO             : 48 60
DIVIDIDO             : 52
DOS_PUNTOS           : 4 5 9 10 39
ENTERO               : 63
EXPONENCIACION       : 53
FDECIMAL             : 64
ID                   : 5 12 13 16 17 20 21 26 27 27 29 32 33 33 35 36 36 36 37 37 37 38 38 39 62 70 73 74 75 76 76 76
IGUAL                : 10 10 33 34 35 38 43 55 55
LLAVEDER             : 
LLAVEIZQ             : 
MAS                  : 49
MAYORQ               : 44 56
MAYOR_IGUALQ         : 46 58
MENORQ               : 45 57
MENOR_IGUALQ         : 47 59
MENOS                : 50
MODULO               : 54
NAME                 : 10
None                 : 66
PARDER               : 4 5 9 27 28 29 30 31 32 36 37 74 75 76
PARIZQ               : 4 5 9 27 28 29 30 31 32 36 37 74 75 76
POR                  : 15 51
PUNTO                : 12 13 20 33 36 37 38 76
as                   : 17
def                  : 4 5
ejecutar             : 23 37 76
ejecutar_analisis    : 75
error                : 
false                : 68
for                  : 39
from                 : 14 15 16
global               : 26
goto                 : 12 14
if                   : 9 10
import               : 14 15 16 19
in                   : 39
label                : 13
main                 : 4 22 30
print                : 31 32
return               : 40
true                 : 67
with_goto            : 11 14

Nonterminals, with rules where they appear

decorador            : 8
expre                : 9 9 33 61
expresiones          : 31 34 35 35 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 72 73 74
importacion          : 6
importas             : 14 15 16 19
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
ldeclaracionesg      : 7 24 25
ldeclarlocals        : 24
lidsp                : 15 16 19 20 27 28 34 39
relacional           : 9
sentGoto             : 41
sentLabel            : 42

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . def main PARIZQ PARDER DOS_PUNTOS
    (5) instruccion -> . def ID PARIZQ PARDER DOS_PUNTOS
    (6) instruccion -> . importacion
    (7) instruccion -> . ldeclaracionesg
    (8) instruccion -> . decorador
    (9) instruccion -> . if PARIZQ expre relacional expre PARDER DOS_PUNTOS
    (10) instruccion -> . if NAME IGUAL IGUAL CADENA DOS_PUNTOS
    (14) importacion -> . from goto import with_goto importas
    (15) importacion -> . from lidsp import POR importas
    (16) importacion -> . from lidsp import ID importas
    (19) importacion -> . import lidsp importas
    (26) ldeclaracionesg -> . global ID
    (27) ldeclaracionesg -> . lidsp PARIZQ ID COMA ID PARDER
    (28) ldeclaracionesg -> . lidsp PARIZQ PARDER
    (29) ldeclaracionesg -> . ID PARIZQ PARDER
    (30) ldeclaracionesg -> . main PARIZQ PARDER
    (31) ldeclaracionesg -> . print PARIZQ expresiones PARDER
    (32) ldeclaracionesg -> . print PARIZQ ID CADENA PARDER
    (33) ldeclaracionesg -> . ID PUNTO ID IGUAL expre
    (34) ldeclaracionesg -> . lidsp IGUAL expresiones
    (35) ldeclaracionesg -> . ID CORIZQ expresiones CORDER IGUAL expresiones
    (36) ldeclaracionesg -> . ID PUNTO ID PARIZQ ID PARDER
    (37) ldeclaracionesg -> . ID PUNTO ejecutar PARIZQ ID COMA ID PARDER
    (38) ldeclaracionesg -> . ID PUNTO ID IGUAL CORIZQ CORDER
    (39) ldeclaracionesg -> . for ID in lidsp DOS_PUNTOS
    (40) ldeclaracionesg -> . return
    (41) ldeclaracionesg -> . sentGoto
    (42) ldeclaracionesg -> . sentLabel
    (11) decorador -> . ARROBA with_goto
    (20) lidsp -> . lidsp PUNTO ID
    (21) lidsp -> . ID
    (22) lidsp -> . main
    (23) lidsp -> . ejecutar
    (12) sentGoto -> . goto PUNTO ID
    (13) sentLabel -> . label PUNTO ID

    def             shift and go to state 4
    if              shift and go to state 10
    from            shift and go to state 11
    import          shift and go to state 13
    global          shift and go to state 15
    ID              shift and go to state 6
    main            shift and go to state 5
    print           shift and go to state 16
    for             shift and go to state 18
    return          shift and go to state 19
    ARROBA          shift and go to state 22
    ejecutar        shift and go to state 17
    goto            shift and go to state 12
    label           shift and go to state 23

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    importacion                    shift and go to state 7
    ldeclaracionesg                shift and go to state 8
    decorador                      shift and go to state 9
    lidsp                          shift and go to state 14
    sentGoto                       shift and go to state 20
    sentLabel                      shift and go to state 21

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . def main PARIZQ PARDER DOS_PUNTOS
    (5) instruccion -> . def ID PARIZQ PARDER DOS_PUNTOS
    (6) instruccion -> . importacion
    (7) instruccion -> . ldeclaracionesg
    (8) instruccion -> . decorador
    (9) instruccion -> . if PARIZQ expre relacional expre PARDER DOS_PUNTOS
    (10) instruccion -> . if NAME IGUAL IGUAL CADENA DOS_PUNTOS
    (14) importacion -> . from goto import with_goto importas
    (15) importacion -> . from lidsp import POR importas
    (16) importacion -> . from lidsp import ID importas
    (19) importacion -> . import lidsp importas
    (26) ldeclaracionesg -> . global ID
    (27) ldeclaracionesg -> . lidsp PARIZQ ID COMA ID PARDER
    (28) ldeclaracionesg -> . lidsp PARIZQ PARDER
    (29) ldeclaracionesg -> . ID PARIZQ PARDER
    (30) ldeclaracionesg -> . main PARIZQ PARDER
    (31) ldeclaracionesg -> . print PARIZQ expresiones PARDER
    (32) ldeclaracionesg -> . print PARIZQ ID CADENA PARDER
    (33) ldeclaracionesg -> . ID PUNTO ID IGUAL expre
    (34) ldeclaracionesg -> . lidsp IGUAL expresiones
    (35) ldeclaracionesg -> . ID CORIZQ expresiones CORDER IGUAL expresiones
    (36) ldeclaracionesg -> . ID PUNTO ID PARIZQ ID PARDER
    (37) ldeclaracionesg -> . ID PUNTO ejecutar PARIZQ ID COMA ID PARDER
    (38) ldeclaracionesg -> . ID PUNTO ID IGUAL CORIZQ CORDER
    (39) ldeclaracionesg -> . for ID in lidsp DOS_PUNTOS
    (40) ldeclaracionesg -> . return
    (41) ldeclaracionesg -> . sentGoto
    (42) ldeclaracionesg -> . sentLabel
    (11) decorador -> . ARROBA with_goto
    (20) lidsp -> . lidsp PUNTO ID
    (21) lidsp -> . ID
    (22) lidsp -> . main
    (23) lidsp -> . ejecutar
    (12) sentGoto -> . goto PUNTO ID
    (13) sentLabel -> . label PUNTO ID

    $end            reduce using rule 1 (init -> instrucciones .)
    def             shift and go to state 4
    if              shift and go to state 10
    from            shift and go to state 11
    import          shift and go to state 13
    global          shift and go to state 15
    ID              shift and go to state 6
    main            shift and go to state 5
    print           shift and go to state 16
    for             shift and go to state 18
    return          shift and go to state 19
    ARROBA          shift and go to state 22
    ejecutar        shift and go to state 17
    goto            shift and go to state 12
    label           shift and go to state 23

    instruccion                    shift and go to state 24
    importacion                    shift and go to state 7
    ldeclaracionesg                shift and go to state 8
    decorador                      shift and go to state 9
    lidsp                          shift and go to state 14
    sentGoto                       shift and go to state 20
    sentLabel                      shift and go to state 21

state 3

    (3) instrucciones -> instruccion .

    def             reduce using rule 3 (instrucciones -> instruccion .)
    if              reduce using rule 3 (instrucciones -> instruccion .)
    from            reduce using rule 3 (instrucciones -> instruccion .)
    import          reduce using rule 3 (instrucciones -> instruccion .)
    global          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    main            reduce using rule 3 (instrucciones -> instruccion .)
    print           reduce using rule 3 (instrucciones -> instruccion .)
    for             reduce using rule 3 (instrucciones -> instruccion .)
    return          reduce using rule 3 (instrucciones -> instruccion .)
    ARROBA          reduce using rule 3 (instrucciones -> instruccion .)
    ejecutar        reduce using rule 3 (instrucciones -> instruccion .)
    goto            reduce using rule 3 (instrucciones -> instruccion .)
    label           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> def . main PARIZQ PARDER DOS_PUNTOS
    (5) instruccion -> def . ID PARIZQ PARDER DOS_PUNTOS

    main            shift and go to state 25
    ID              shift and go to state 26


state 5

    (30) ldeclaracionesg -> main . PARIZQ PARDER
    (22) lidsp -> main .

  ! shift/reduce conflict for PARIZQ resolved as shift
    PARIZQ          shift and go to state 27
    IGUAL           reduce using rule 22 (lidsp -> main .)
    PUNTO           reduce using rule 22 (lidsp -> main .)

  ! PARIZQ          [ reduce using rule 22 (lidsp -> main .) ]


state 6

    (29) ldeclaracionesg -> ID . PARIZQ PARDER
    (33) ldeclaracionesg -> ID . PUNTO ID IGUAL expre
    (35) ldeclaracionesg -> ID . CORIZQ expresiones CORDER IGUAL expresiones
    (36) ldeclaracionesg -> ID . PUNTO ID PARIZQ ID PARDER
    (37) ldeclaracionesg -> ID . PUNTO ejecutar PARIZQ ID COMA ID PARDER
    (38) ldeclaracionesg -> ID . PUNTO ID IGUAL CORIZQ CORDER
    (21) lidsp -> ID .

  ! shift/reduce conflict for PARIZQ resolved as shift
  ! shift/reduce conflict for PUNTO resolved as shift
    PARIZQ          shift and go to state 28
    PUNTO           shift and go to state 29
    CORIZQ          shift and go to state 30
    IGUAL           reduce using rule 21 (lidsp -> ID .)

  ! PARIZQ          [ reduce using rule 21 (lidsp -> ID .) ]
  ! PUNTO           [ reduce using rule 21 (lidsp -> ID .) ]


state 7

    (6) instruccion -> importacion .

    def             reduce using rule 6 (instruccion -> importacion .)
    if              reduce using rule 6 (instruccion -> importacion .)
    from            reduce using rule 6 (instruccion -> importacion .)
    import          reduce using rule 6 (instruccion -> importacion .)
    global          reduce using rule 6 (instruccion -> importacion .)
    ID              reduce using rule 6 (instruccion -> importacion .)
    main            reduce using rule 6 (instruccion -> importacion .)
    print           reduce using rule 6 (instruccion -> importacion .)
    for             reduce using rule 6 (instruccion -> importacion .)
    return          reduce using rule 6 (instruccion -> importacion .)
    ARROBA          reduce using rule 6 (instruccion -> importacion .)
    ejecutar        reduce using rule 6 (instruccion -> importacion .)
    goto            reduce using rule 6 (instruccion -> importacion .)
    label           reduce using rule 6 (instruccion -> importacion .)
    $end            reduce using rule 6 (instruccion -> importacion .)


state 8

    (7) instruccion -> ldeclaracionesg .

    def             reduce using rule 7 (instruccion -> ldeclaracionesg .)
    if              reduce using rule 7 (instruccion -> ldeclaracionesg .)
    from            reduce using rule 7 (instruccion -> ldeclaracionesg .)
    import          reduce using rule 7 (instruccion -> ldeclaracionesg .)
    global          reduce using rule 7 (instruccion -> ldeclaracionesg .)
    ID              reduce using rule 7 (instruccion -> ldeclaracionesg .)
    main            reduce using rule 7 (instruccion -> ldeclaracionesg .)
    print           reduce using rule 7 (instruccion -> ldeclaracionesg .)
    for             reduce using rule 7 (instruccion -> ldeclaracionesg .)
    return          reduce using rule 7 (instruccion -> ldeclaracionesg .)
    ARROBA          reduce using rule 7 (instruccion -> ldeclaracionesg .)
    ejecutar        reduce using rule 7 (instruccion -> ldeclaracionesg .)
    goto            reduce using rule 7 (instruccion -> ldeclaracionesg .)
    label           reduce using rule 7 (instruccion -> ldeclaracionesg .)
    $end            reduce using rule 7 (instruccion -> ldeclaracionesg .)


state 9

    (8) instruccion -> decorador .

    def             reduce using rule 8 (instruccion -> decorador .)
    if              reduce using rule 8 (instruccion -> decorador .)
    from            reduce using rule 8 (instruccion -> decorador .)
    import          reduce using rule 8 (instruccion -> decorador .)
    global          reduce using rule 8 (instruccion -> decorador .)
    ID              reduce using rule 8 (instruccion -> decorador .)
    main            reduce using rule 8 (instruccion -> decorador .)
    print           reduce using rule 8 (instruccion -> decorador .)
    for             reduce using rule 8 (instruccion -> decorador .)
    return          reduce using rule 8 (instruccion -> decorador .)
    ARROBA          reduce using rule 8 (instruccion -> decorador .)
    ejecutar        reduce using rule 8 (instruccion -> decorador .)
    goto            reduce using rule 8 (instruccion -> decorador .)
    label           reduce using rule 8 (instruccion -> decorador .)
    $end            reduce using rule 8 (instruccion -> decorador .)


state 10

    (9) instruccion -> if . PARIZQ expre relacional expre PARDER DOS_PUNTOS
    (10) instruccion -> if . NAME IGUAL IGUAL CADENA DOS_PUNTOS

    PARIZQ          shift and go to state 31
    NAME            shift and go to state 32


state 11

    (14) importacion -> from . goto import with_goto importas
    (15) importacion -> from . lidsp import POR importas
    (16) importacion -> from . lidsp import ID importas
    (20) lidsp -> . lidsp PUNTO ID
    (21) lidsp -> . ID
    (22) lidsp -> . main
    (23) lidsp -> . ejecutar

    goto            shift and go to state 33
    ID              shift and go to state 35
    main            shift and go to state 36
    ejecutar        shift and go to state 17

    lidsp                          shift and go to state 34

state 12

    (12) sentGoto -> goto . PUNTO ID

    PUNTO           shift and go to state 37


state 13

    (19) importacion -> import . lidsp importas
    (20) lidsp -> . lidsp PUNTO ID
    (21) lidsp -> . ID
    (22) lidsp -> . main
    (23) lidsp -> . ejecutar

    ID              shift and go to state 35
    main            shift and go to state 36
    ejecutar        shift and go to state 17

    lidsp                          shift and go to state 38

state 14

    (27) ldeclaracionesg -> lidsp . PARIZQ ID COMA ID PARDER
    (28) ldeclaracionesg -> lidsp . PARIZQ PARDER
    (34) ldeclaracionesg -> lidsp . IGUAL expresiones
    (20) lidsp -> lidsp . PUNTO ID

    PARIZQ          shift and go to state 39
    IGUAL           shift and go to state 40
    PUNTO           shift and go to state 41


state 15

    (26) ldeclaracionesg -> global . ID

    ID              shift and go to state 42


state 16

    (31) ldeclaracionesg -> print . PARIZQ expresiones PARDER
    (32) ldeclaracionesg -> print . PARIZQ ID CADENA PARDER

    PARIZQ          shift and go to state 43


state 17

    (23) lidsp -> ejecutar .

    PARIZQ          reduce using rule 23 (lidsp -> ejecutar .)
    IGUAL           reduce using rule 23 (lidsp -> ejecutar .)
    PUNTO           reduce using rule 23 (lidsp -> ejecutar .)
    import          reduce using rule 23 (lidsp -> ejecutar .)
    as              reduce using rule 23 (lidsp -> ejecutar .)
    def             reduce using rule 23 (lidsp -> ejecutar .)
    if              reduce using rule 23 (lidsp -> ejecutar .)
    from            reduce using rule 23 (lidsp -> ejecutar .)
    global          reduce using rule 23 (lidsp -> ejecutar .)
    ID              reduce using rule 23 (lidsp -> ejecutar .)
    main            reduce using rule 23 (lidsp -> ejecutar .)
    print           reduce using rule 23 (lidsp -> ejecutar .)
    for             reduce using rule 23 (lidsp -> ejecutar .)
    return          reduce using rule 23 (lidsp -> ejecutar .)
    ARROBA          reduce using rule 23 (lidsp -> ejecutar .)
    ejecutar        reduce using rule 23 (lidsp -> ejecutar .)
    goto            reduce using rule 23 (lidsp -> ejecutar .)
    label           reduce using rule 23 (lidsp -> ejecutar .)
    $end            reduce using rule 23 (lidsp -> ejecutar .)
    DOS_PUNTOS      reduce using rule 23 (lidsp -> ejecutar .)


state 18

    (39) ldeclaracionesg -> for . ID in lidsp DOS_PUNTOS

    ID              shift and go to state 44


state 19

    (40) ldeclaracionesg -> return .
